price error fixed

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -50,7 +50,7 @@
         "photo": "photo3"
     }],
     "price_title": "PRICING",
-    "prcie_sub": "Select the best plan for you.",
+    "price_sub": "Select the best plan for you.",
     "text_notes": "Text Notes",
     "pictures": "Pictures",
     "on_demand": "On Demand",
