--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -61,7 +61,7 @@
         }
     ],
     "price_title": "PLANES Y PRECIOS",
-    "prcie_sub": "Selecciona el mejor plan para ti.",
+    "price_sub": "Selecciona el mejor plan para ti.",
     "text_notes": "Notas de texto",
     "pictures": "Imagenes",
     "on_demand": "Bajo demanda",
