--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,5 +1,6 @@
 {
     "home": "INICIO",
+    "signup": "REGISTRATE",
     "about": "ACERCA",
     "features": "CARACTERISTICAS",
     "reviews": "RESEÑAS",
