listo xD 100% real no fake

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -55,5 +55,6 @@
     "text_notes": "Text Notes",
     "pictures": "Pictures",
     "on_demand": "On Demand",
-    "mem_pers_year": "Memories / Person / Years"
+    "mem_pers_year": "Memories / Person / Years",
+    "language:": "language:"
 }
