--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -66,5 +66,6 @@
     "text_notes": "Notas de texto",
     "pictures": "Imagenes",
     "on_demand": "Bajo demanda",
-    "mem_pers_year": "Memorias / Personas / Años"
+    "mem_pers_year": "Memorias / Personas / Años",
+    "language:": "idioma:"
 }
