listo ahora si alv

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "home": "HOME",
-    "signup": "SIGN UP",
+    "signup": "LOGIN / SIGN UP",
     "about": "ABOUT",
     "features": "FEATURES",
     "reviews": "REVIEWS",
