--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,6 +1,6 @@
 {
     "home": "INICIO",
-    "signup": "REGISTRATE",
+    "signup": "ENTRAR / REGISTRO",
     "about": "ACERCA",
     "features": "CARACTERISTICAS",
     "reviews": "RESEÑAS",
