--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -13,25 +13,25 @@
     "feature_items": [
         {
             "Title": "Upload",
-            "Desc": "Upload images, videos, recorded messages and pre-written text messages."
+            "Desc": "Upload pictures, videos, recorded messages, and pre-written text messages."
         }, {
             "Title": "Store and retrieve",
-            "Desc": "Save and revisit multiple audiovisual formats for up to 15 years."
+            "Desc": "Store and retrieve multiple media types for up to 15 years."
         }, {
             "Title": "Distribute messages",
-            "Desc": "Distribute messages to a maximum of 10 people."
+            "Desc": "Distribute messages to up to 10 people."
         }, {
             "Title": "Send monetary gifts",
-            "Desc": "Send monetary gifts and donate to charity."
+            "Desc": "Send monetary gifts and provide charitable giving."
         }, {
             "Title": "Process one time",
-            "Desc": "Process your payments and subscriptions in one go if you wish."
+            "Desc": "Process one time only payments and subscription payments if desired."
         }, {
             "Title": "Contact clients",
-            "Desc": "Contact your loved ones via notifications, texts, emails or by phone automatically at specific time intervals."
+            "Desc": "Contact designated friends and family members via notifications, text, email, or phone automatically at specific time intervals you create."
         }, {
             "Title": "Allow the customer",
-            "Desc": "Allows you to receive messages via WhatsaApp, Facebook or texts."
+            "Desc": "Allow the customer to pull messages via WhatsApp, Facebook, or text."
         }, {
             "Title": "Available in",
             "Desc": "Available in English and Spanish."
